// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Crosshair share code > should generate ConVars from crosshair 1`] = `
"
cl_crosshair_drawoutline \\"1\\"
cl_crosshair_dynamic_maxdist_splitratio \\"0.5\\"
cl_crosshair_dynamic_splitalpha_innermod \\"0.6\\"
cl_crosshair_dynamic_splitalpha_outermod \\"0.4\\"
cl_crosshair_dynamic_splitdist \\"6\\"
cl_crosshair_outlinethickness \\"2\\"
cl_crosshair_t \\"1\\"
cl_crosshairalpha \\"137\\"
cl_crosshaircolor \\"5\\"
cl_crosshaircolor_b \\"213\\"
cl_crosshaircolor_g \\"81\\"
cl_crosshaircolor_r \\"175\\"
cl_crosshairdot \\"1\\"
cl_crosshairgap \\"-1.3\\"
cl_crosshairgap_useweaponvalue \\"1\\"
cl_crosshairsize \\"4.6\\"
cl_crosshairstyle \\"2\\"
cl_crosshairthickness \\"1.2\\"
cl_crosshairusealpha \\"1\\"
cl_fixedcrosshairgap \\"3\\"
cl_crosshair_recoil \\"0\\"
"
`;

exports[`Crosshair share code > should generate ConVars from crosshair 2`] = `
"
cl_crosshair_drawoutline \\"0\\"
cl_crosshair_dynamic_maxdist_splitratio \\"0.3\\"
cl_crosshair_dynamic_splitalpha_innermod \\"1\\"
cl_crosshair_dynamic_splitalpha_outermod \\"0.5\\"
cl_crosshair_dynamic_splitdist \\"7\\"
cl_crosshair_outlinethickness \\"1\\"
cl_crosshair_t \\"0\\"
cl_crosshairalpha \\"200\\"
cl_crosshaircolor \\"1\\"
cl_crosshaircolor_b \\"50\\"
cl_crosshaircolor_g \\"250\\"
cl_crosshaircolor_r \\"50\\"
cl_crosshairdot \\"0\\"
cl_crosshairgap \\"1\\"
cl_crosshairgap_useweaponvalue \\"0\\"
cl_crosshairsize \\"5\\"
cl_crosshairstyle \\"3\\"
cl_crosshairthickness \\"0.5\\"
cl_crosshairusealpha \\"0\\"
cl_fixedcrosshairgap \\"3\\"
cl_crosshair_recoil \\"0\\"
"
`;

exports[`Crosshair share code > should generate ConVars from crosshair 3`] = `
"
cl_crosshair_drawoutline \\"0\\"
cl_crosshair_dynamic_maxdist_splitratio \\"0.3\\"
cl_crosshair_dynamic_splitalpha_innermod \\"1\\"
cl_crosshair_dynamic_splitalpha_outermod \\"0.5\\"
cl_crosshair_dynamic_splitdist \\"7\\"
cl_crosshair_outlinethickness \\"1\\"
cl_crosshair_t \\"0\\"
cl_crosshairalpha \\"200\\"
cl_crosshaircolor \\"5\\"
cl_crosshaircolor_b \\"50\\"
cl_crosshaircolor_g \\"250\\"
cl_crosshaircolor_r \\"50\\"
cl_crosshairdot \\"1\\"
cl_crosshairgap \\"1\\"
cl_crosshairgap_useweaponvalue \\"1\\"
cl_crosshairsize \\"5\\"
cl_crosshairstyle \\"1\\"
cl_crosshairthickness \\"0.5\\"
cl_crosshairusealpha \\"1\\"
cl_fixedcrosshairgap \\"4.3\\"
cl_crosshair_recoil \\"0\\"
"
`;

exports[`Crosshair share code > should generate ConVars from crosshair 4`] = `
"
cl_crosshair_drawoutline \\"0\\"
cl_crosshair_dynamic_maxdist_splitratio \\"0.3\\"
cl_crosshair_dynamic_splitalpha_innermod \\"1\\"
cl_crosshair_dynamic_splitalpha_outermod \\"0.5\\"
cl_crosshair_dynamic_splitdist \\"7\\"
cl_crosshair_outlinethickness \\"1\\"
cl_crosshair_t \\"0\\"
cl_crosshairalpha \\"200\\"
cl_crosshaircolor \\"5\\"
cl_crosshaircolor_b \\"50\\"
cl_crosshaircolor_g \\"250\\"
cl_crosshaircolor_r \\"50\\"
cl_crosshairdot \\"1\\"
cl_crosshairgap \\"1\\"
cl_crosshairgap_useweaponvalue \\"1\\"
cl_crosshairsize \\"5\\"
cl_crosshairstyle \\"2\\"
cl_crosshairthickness \\"0.5\\"
cl_crosshairusealpha \\"1\\"
cl_fixedcrosshairgap \\"4.3\\"
cl_crosshair_recoil \\"1\\"
"
`;

exports[`Crosshair share code > should generate ConVars from crosshair 5`] = `
"
cl_crosshair_drawoutline \\"1\\"
cl_crosshair_dynamic_maxdist_splitratio \\"1\\"
cl_crosshair_dynamic_splitalpha_innermod \\"0\\"
cl_crosshair_dynamic_splitalpha_outermod \\"1\\"
cl_crosshair_dynamic_splitdist \\"3\\"
cl_crosshair_outlinethickness \\"1\\"
cl_crosshair_t \\"0\\"
cl_crosshairalpha \\"200\\"
cl_crosshaircolor \\"1\\"
cl_crosshaircolor_b \\"50\\"
cl_crosshaircolor_g \\"250\\"
cl_crosshaircolor_r \\"50\\"
cl_crosshairdot \\"0\\"
cl_crosshairgap \\"-2.2\\"
cl_crosshairgap_useweaponvalue \\"1\\"
cl_crosshairsize \\"10\\"
cl_crosshairstyle \\"2\\"
cl_crosshairthickness \\"0.6\\"
cl_crosshairusealpha \\"1\\"
cl_fixedcrosshairgap \\"3\\"
cl_crosshair_recoil \\"1\\"
"
`;

exports[`Crosshair share code > should generate ConVars from crosshair 6`] = `
"
cl_crosshair_drawoutline \\"0\\"
cl_crosshair_dynamic_maxdist_splitratio \\"0.5\\"
cl_crosshair_dynamic_splitalpha_innermod \\"0.5\\"
cl_crosshair_dynamic_splitalpha_outermod \\"0.6\\"
cl_crosshair_dynamic_splitdist \\"7\\"
cl_crosshair_outlinethickness \\"1\\"
cl_crosshair_t \\"1\\"
cl_crosshairalpha \\"136\\"
cl_crosshaircolor \\"5\\"
cl_crosshaircolor_b \\"227\\"
cl_crosshaircolor_g \\"88\\"
cl_crosshaircolor_r \\"232\\"
cl_crosshairdot \\"1\\"
cl_crosshairgap \\"-1.2\\"
cl_crosshairgap_useweaponvalue \\"0\\"
cl_crosshairsize \\"7.2\\"
cl_crosshairstyle \\"2\\"
cl_crosshairthickness \\"1.5\\"
cl_crosshairusealpha \\"0\\"
cl_fixedcrosshairgap \\"3\\"
cl_crosshair_recoil \\"1\\"
"
`;
